# LJA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.md
.github/workflows/: cmake.yml
conda/: build.sh
docs/: LJA-ML-Interface.md  jumbodbg_manual.md  lja_manual.md
docs/.attachments/: LJAInference.drawio
src/lib/: CMakeLists.txt
src/lib/edlib/: CMakeLists.txt
src/lib/ksw2/: CMakeLists.txt  ksw2_extz2_sse.c  ksw_wrapper.hpp
src/lib/spoa/: .travis.yml  README.md
src/lib/yak/: CMakeLists.txt  yak_lib.c  yak_lib.h
src/projects/: CMakeLists.txt
src/projects/assembly_graph/: CMakeLists.txt  ag_algorithms.hpp  alignment_chain.hpp  assembly_graph.hpp  assembly_graph_base.hpp  compact_path.hpp  component.hpp  graph_alignment_storage.cpp  graph_alignment_storage.hpp  listeners.hpp  paths.hpp  splitters.hpp  vertex_resolution.hpp  visualization.hpp
src/projects/dbg/: CMakeLists.txt  aln_reads_reader.cpp  aln_reads_reader.hpp  assembly_graph.hpp  compact_path.hpp  compact_read_storage.hpp  component.cpp  component.hpp  dbg_construction.cpp  dbg_construction.hpp  dbg_disjointigs.cpp  dbg_disjointigs.hpp  dbg_graph_aligner.cpp  dbg_graph_aligner.hpp  graph_algorithms.cpp  graph_algorithms.hpp  graph_alignment_storage.cpp  graph_alignment_storage.hpp  graph_modification.cpp  graph_modification.hpp  graph_printing.hpp  graph_stats.hpp  id_index.hpp  minimizer_selection.cpp  minimizer_selection.hpp  multi_graph.cpp  multi_graph.hpp  paths.cpp  paths.hpp  sparse_dbg.cpp  sparse_dbg.hpp  subdatasets.hpp  visualization.cpp  visualization.hpp
src/projects/error_correction/: CMakeLists.txt  bulge_path_fixer.hpp  bulge_path_marker.hpp  correction_utils.cpp  correction_utils.hpp  coverage_ec_stage.hpp  dimer_correction.cpp  dimer_correction.hpp  diploidy_analysis.cpp  diploidy_analysis.hpp  edit_distance.hpp  error_correction.hpp  ff.hpp  gap_closing.cpp  gap_closing.hpp  initial_correction.cpp  initial_correction.hpp  manyk_correction.cpp  manyk_correction.hpp  mitochondria_rescue.hpp  mult_correction.cpp  mult_correction.hpp  multiplicity_estimation.cpp  multiplicity_estimation.hpp  no_correction_stage.hpp  parameter_estimator.hpp  partial_rr.hpp  precorrection.cpp  precorrection.hpp  reliable_filler_interface.cpp  reliable_filler_interface.hpp  reliable_fillers.cpp  reliable_fillers.hpp  tip_correction.cpp  tip_correction.hpp  topology_ec_stage.hpp  tournament_correction.cpp  tournament_correction.hpp  uniqueness.hpp
src/projects/lja/: CMakeLists.txt  dbg.cpp  gap_closing.cpp  gap_closing.hpp  haplo_stats.hpp  lja.cpp  multi_graph.hpp  pipeline.cpp  pipeline.hpp  run_trio.cpp  subdataset_processing.cpp  subdataset_processing.hpp  test.cpp  uncompressed_output.cpp  uncompressed_output.hpp
src/projects/nano/: CMakeLists.txt  GraphContig.hpp  GraphSimplificator.cpp  GraphSimplificator.h  ReadsAligner.cpp  ReadsAligner.h  SGraphBuilder.cpp  SGraphBuilder.h  TipResolver.cpp  TipResolver.h  VertexExtender.cpp  VertexExtender.h  align.cpp  alignment_correction.cpp  alignment_correction.hpp  graph_alignment.hpp  nano.cpp  ont_graph_simplification.hpp  run_alignment.cpp
src/projects/polishing/: CMakeLists.txt  graph_polishing.cpp  graph_polishing.hpp  homopolish.cpp  homopolish.hpp  perfect_alignment.hpp  polishing_stage.cpp  polishing_stage.hpp  run_polishing.cpp  uncompressed_output.cpp  uncompressed_output.hpp
src/projects/repeat_resolution/: CMakeLists.txt  GraphContig.hpp  mdbg.cpp  mdbg.hpp  mdbg_inc.cpp  mdbg_inc.hpp  mdbg_seq.cpp  mdbg_seq.hpp  mdbg_stage.hpp  mdbg_topology.cpp  mdbg_topology.hpp  mdbg_vertex_processor.cpp  mdbg_vertex_processor.hpp  multiplex_dbg.hpp  multiplex_dbg_topology.cpp  multiplex_dbg_topology.hpp  paths.cpp  paths.hpp  repeat_resolution.cpp  repeat_resolution.hpp  rr_graph.hpp
src/projects/scripts/: CMakeLists.txt  align_and_print.cpp  analyse_alignment.cpp  analyze_gfa_dbg.cpp  compress.cpp  consensus_build.cpp  diploidy_remover.cpp  divergence_to_bitvector.cpp  dot_bulge_stats.cpp  extract_subsequence.cpp  glue_ref.cpp  ideal_graph_analysis.cpp  mass_dbg.cpp  parse_readlog.cpp  parse_sam.cpp  popsize_stats.cpp  print_breaks.cpp  print_tips.cpp  reference_shredding.cpp  sdbg_stats.cpp  seqio_check.cpp  split_gfa.cpp  split_uncompressed_gfa.cpp  sptransform.cpp  subdataset_extraction.cpp  test.cpp  test_mg.cpp  vizualization_test.cpp
src/projects/scripts/polishing/: check_shared_snps.py  check_uncovered.py  classify_snps.py  compress_snps.py  count_additional_stats.py  count_classified_stats.py  count_dimer_mult.py  extract_reads.py  generate_high_stats.py  get_all_amounts.py  get_clusters.py  get_cov_alignments.py  get_uncovered_regions.py  multiAT.py  no_linebreak.py  paf_to_local.py  resort_reads.py  study_high_mult.py
src/projects/scripts/trio/: bin_to_colors.py  check_bulges.py  extract_ambiguous.py  extract_unbranching_paths.py  get_coords.py
src/projects/scripts/visualization/: gfa2dot.py
src/projects/supregraph/: CMakeLists.txt  converter.hpp  decision_rules.cpp  decision_rules.hpp  list_path.cpp  list_path.hpp  listeners.cpp  listeners.hpp  multiplexer.cpp  multiplexer.hpp  multiplexing_test.cpp  read_storage.cpp  read_storage.hpp  supregraph.cpp  supregraph.hpp  supregraph_base.cpp  supregraph_base.hpp  unique_vertex_storage.cpp  unique_vertex_storage.hpp  vertex_resolution.cpp  vertex_resolution.hpp
src/projects/trio/: CMakeLists.txt  haplo_stats.hpp  run_trio.cpp  trio.cpp  trio.hpp  trio_stages.hpp
src/tests/: CMakeLists.txt  test_rr.cpp
src/tests/googletest-master/: CMakeLists.txt
src/tests/googletest-master/googlemock/docs/: cheat_sheet.md  cook_book.md  pump_manual.md
src/tests/googletest-master/googlemock/include/gmock/: gmock-matchers.h
src/tests/googletest-master/googlemock/scripts/: fuse_gmock_files.py
src/tests/googletest-master/googletest/: CMakeLists.txt
src/tests/googletest-master/googletest/include/gtest/: gtest-param-test.h
src/tests/test_repeat_resolution/: test_mdbg.cpp  test_mdbgseq.cpp  test_paths.cpp  test_rr.cpp
src/tools/: CMakeLists.txt
src/tools/alignment/: CMakeLists.txt  (+5 more)
(+41 files in other folders)
