add_subdirectory(assembly_graph)
add_subdirectory(dbg)
add_subdirectory(supregraph)
#add_subdirectory(mosaic)
add_subdirectory(scripts)
add_subdirectory(lja)
add_subdirectory(error_correction)
add_subdirectory(polishing)
add_subdirectory(repeat_resolution)
add_subdirectory(trio)
add_subdirectory(nano)
