############################################################################
# Copyright (c) 2022 Saint Petersburg State University
# All Rights Reserved
# See file LICENSE for details.
############################################################################

project(edlib C CXX)

#add_executable(edlib edlib.cpp)
add_library(edlib STATIC edlib.cpp)


