############################################################################
# Copyright (c) 2015 Saint Petersburg State University
# All Rights Reserved
# See file LICENSE for details.
############################################################################

project(ksw2 C CXX)

add_library(ksw2 STATIC
            ksw2_extz2_sse.c)

