project(polishing)
add_library(lja_homopolish STATIC homopolish.cpp uncompressed_output.cpp polishing_stage.cpp)
target_link_libraries(lja_homopolish lja_common lja_sequence lja_dbg spoa lja_alignment ksw2)

add_executable(run_polishing run_polishing.cpp)
target_link_libraries(run_polishing lja_homopolish)

add_executable(graph_polishing graph_polishing.cpp)
target_link_libraries(graph_polishing lja_common lja_sequence lja_dbg)