project(scripts)
set(CMAKE_CXX_STANDARD 14)
#add_executable(analyse_hifi main.cpp)
#add_executable(count_perfect count_perfect.cpp)
#add_executable(analyse_positions position_analysis.cpp)
#add_executable(read_filter read_filter.cpp)
#add_executable(simulate_from_paf simulate_from_paf.cpp)
#add_executable(extract_from_paf extract_from_paf.cpp)
#add_executable(refill_fasta refill_fasta.cpp)
#add_executable(filter_long filter_long.cpp)
#add_executable(count_reads count_reads.cpp)
#add_executable(count_paf count_paf.cpp)
#add_executable(assembly_stats assembly_stats.cpp)
#add_executable(stats_from_paf stats_from_paf.cpp)
#add_executable(find find.cpp)
#add_executable(subseq subseq.cpp)
#add_executable(perfect_align perfect_align.cpp)
#add_executable(compress compress.cpp)
#add_executable(remove_rc remove_rc.cpp)
#add_executable(prepare_final prepare_final.cpp)
#add_executable(prepare_ref_paths prepare_ref_paths.cpp)
#add_executable(parse_gfa parse_gfa.cpp)
#add_executable(run run.cpp)
#add_executable(remove_duplicates remove_duplicates.cpp)
#add_executable(coords_compress coords_compress.cpp)
#add_executable(compress_reads compress_reads.cpp)
#add_executable(detect_dimers detect_dimers.cpp)
#add_executable(compress_bed compress_bed.cpp)
#add_executable(parse_quast parse_quast.cpp)
#target_link_libraries(analyse_hifi lja_common minimap lja_sequence alignment)
#target_link_libraries(count_perfect lja_common minimap lja_sequence alignment)
#target_link_libraries(analyse_positions lja_common minimap lja_sequence alignment)
#target_link_libraries(read_filter lja_common lja_sequence)
#target_link_libraries(simulate_from_paf lja_common lja_sequence)
#target_link_libraries(extract_from_paf lja_common lja_sequence)
#target_link_libraries(refill_fasta lja_common lja_sequence)
#target_link_libraries(filter_long lja_common lja_sequence)
#target_link_libraries(count_reads lja_common lja_sequence)
#target_link_libraries(count_paf lja_common lja_sequence)
#target_link_libraries(assembly_stats lja_common lja_sequence)
#target_link_libraries(stats_from_paf lja_common lja_sequence)
#target_link_libraries(find lja_common lja_sequence alignment)
#target_link_libraries(subseq lja_common lja_sequence alignment)
#target_link_libraries(perfect_align lja_common lja_sequence)
#target_link_libraries(compress lja_common lja_sequence)
#target_link_libraries(remove_rc lja_common lja_sequence)
#target_link_libraries(prepare_final lja_common lja_sequence)
#target_link_libraries(prepare_ref_paths lja_common lja_sequence)
#target_link_libraries(parse_gfa lja_common lja_sequence)
#target_link_libraries(run lja_common)
#target_link_libraries(remove_duplicates lja_common lja_sequence)
#target_link_libraries(coords_compress lja_common lja_sequence)
#target_link_libraries(compress_reads lja_common lja_sequence)
#target_link_libraries(detect_dimers lja_common lja_sequence)
#target_link_libraries(compress_bed lja_common lja_sequence)
#target_link_libraries(parse_quast lja_common lja_sequence)
add_executable(split_gfa split_gfa.cpp)
target_link_libraries(split_gfa lja_common lja_sequence)
add_executable(analyze_gfa_dbg analyze_gfa_dbg.cpp)
target_link_libraries(analyze_gfa_dbg lja_common lja_sequence)
add_executable(subdataset_extraction subdataset_extraction.cpp)
target_link_libraries(subdataset_extraction lja_common lja_sequence lja_dbg)
add_executable(sdbg_stats sdbg_stats.cpp)
target_link_libraries(sdbg_stats lja_common lja_sequence lja_dbg)
add_executable(dot_bulge_stats dot_bulge_stats.cpp)
target_link_libraries(dot_bulge_stats lja_common)
add_executable(test_mg test.cpp)
target_link_libraries(test_mg lja_pipeline)
add_executable(print_tips print_tips.cpp)
target_link_libraries(print_tips lja_common lja_dbg lja_sequence)
add_executable(print_breaks print_breaks.cpp)
target_link_libraries(print_breaks lja_common lja_dbg lja_sequence)
add_executable(extract_subsequence extract_subsequence.cpp)
target_link_libraries(extract_subsequence lja_common lja_dbg lja_sequence)
add_executable(parse_readlog parse_readlog.cpp)
target_link_libraries(parse_readlog lja_common lja_dbg lja_sequence)
add_executable(compress compress.cpp)
target_link_libraries(compress lja_common lja_dbg lja_sequence)
